src/test/ui/variance/variance-contravariant-arg-trait-match.stderr
error: lifetime may not live long enough
  --> $DIR/variance-contravariant-arg-trait-match.rs:13:5
   |
LL | fn get_min_from_max<'min, 'max, G>()
   |                     ----  ---- lifetime `'max` defined here
   |                     |
   |                     lifetime `'min` defined here
...
LL |     impls_get::<G,&'min i32>()
   |     ^^^^^^^^^^^^^^^^^^^^^^^^ requires that `'min` must outlive `'max`
   |
   = help: consider adding the following bound: `'min: 'max`

error: lifetime may not live long enough
  --> $DIR/variance-contravariant-arg-trait-match.rs:22:5
   |
LL | fn get_max_from_min<'min, 'max, G>()
   |                     ----  ---- lifetime `'max` defined here
   |                     |
   |                     lifetime `'min` defined here
...
LL |     impls_get::<G,&'max i32>()
   |     ^^^^^^^^^^^^^^^^^^^^^^^^ requires that `'min` must outlive `'max`
   |
   = help: consider adding the following bound: `'min: 'max`

error: aborting due to 2 previous errors

